--- a/2024.1semeste/frontend/noticias/style.css
+++ b/2024.1semeste/frontend/noticias/style.css
@@ -46,6 +46,7 @@ header button {
     border: none;
     background: none;
     width: fit-content;
+    cursor: pointer;
 }
 
 header nav.mobile {
@@ -80,6 +81,10 @@ header .mobile  a {
     color: var(--dark-blue);
     font-size: 1.125rem;
     line-height: 1.5rem;
+}
+
+header .desktop {
+    display: none;
 }
 
 main {
@@ -184,6 +189,10 @@ main {
     margin-block:   0.6rem;
 }
 
+.terceira-secao h2 {
+    text-decoration: none;
+}
+
 .terceira-secao p {
     font-size: 0.9375rem;
     line-height: 1.625rem;
@@ -191,6 +200,28 @@ main {
 }
 
 @media(min-width: 1110px) {
+   header > button {
+        display: none;
+    }
+
+    header .desktop {
+        display: flex;
+        gap: 2.5rem;
+
+    }
+    
+    header .desktop a {
+        font-size: 0.9375rem;
+        line-height: 1.625rem;
+        text-decoration: none;
+        color: var(--gunmetal);
+    }
+
+
+    header .desktop a:hover {
+        color: var(--vermillion);
+    }
+
     main {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -217,24 +248,22 @@ main {
         font-size: 3.5rem;
     }
 
+    .primeira-secao button:hover {
+        background-color: var(--dark-blue);
+        cursor: pointer;
+    }
+
     .primeira-secao h2 {
         font-size: 2.5rem;
     }
 
-    header > button {
-        display: none;
-    }
-
-    header .desktop {
+    .terceira-secao {
         display: flex;
-        gap: 2.5rem;
-
+        grid-column: 1 / 4;
     }
-    
-    header .desktop a {
-        font-size: 0.9375rem;
-        line-height: 1.625rem;
-        text-decoration: none;
-        color: var(--gunmetal);
+
+    .terceira-secao h2:hover {
+        color: var(--vermillion);
+
     }
 }
